@@ -3,29 +3,27 @@ package io.github.headlesshq.headlessmc.launcher.server.downloader;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonParser;
-import lombok.CustomLog;
-import lombok.RequiredArgsConstructor;
 import io.github.headlesshq.headlessmc.launcher.Launcher;
 import io.github.headlesshq.headlessmc.launcher.download.DownloadService;
 import io.github.headlesshq.headlessmc.launcher.server.ServerTypeDownloader;
 import io.github.headlesshq.headlessmc.launcher.util.JsonUtil;
-import io.github.headlesshq.headlessmc.launcher.util.URLs;
+import lombok.CustomLog;
+import lombok.RequiredArgsConstructor;
 import net.lenni0451.commons.httpclient.HttpResponse;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 
 @CustomLog
 @RequiredArgsConstructor
 public class PaperDownloader implements ServerTypeDownloader {
-    private static final URL URL = URLs.url("https://api.papermc.io/v2/projects/paper/versions/");
+    private static final URI URL = URI.create("https://api.papermc.io/v2/projects/paper/versions/");
 
     @Override
     public DownloadHandler download(Launcher launcher, String version, @Nullable String typeVersionIn, String... args) throws IOException {
         String build = getBuild(launcher.getDownloadService(), version, typeVersionIn);
-        URL url = new URL(String.format("%s%s/builds/%s/downloads/paper-%s-%s.jar",
-                URL, version, build, version, build));
+        URI url = URI.create(String.format("%s%s/builds/%s/downloads/paper-%s-%s.jar", URL, version, build, version, build));
         log.debug("Downloading paper from " + url);
         return new UrlJarDownloadHandler(launcher.getDownloadService(), url.toString(), build);
     }
